WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196357
[ iOS Sim ] REGRESSION (
r242986
) Layout Test storage/indexeddb/modern/idbtransaction-objectstore-failures-private.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=196357
Summary
[ iOS Sim ] REGRESSION (r242986) Layout Test storage/indexeddb/modern/idbtran...
Shawn Roberts
Reported
2019-03-28 11:09:54 PDT
The following layout test is failing on iOS Simulator Release WK2 storage/indexeddb/modern/idbtransaction-objectstore-failures-private.html Probable cause: Test has been a flaky failure since test was created in
https://trac.webkit.org/changeset/195394/webkit
However since changes in
https://trac.webkit.org/changeset/242986/webkit
. The test is showing up on iOS Simulator for the first time and failing more consistently. Test behavior is different in testing in
r242985
, and is less flaky in that revision. Reproduced with: run-webkit-tests storage/indexeddb/modern/idbtransaction-objectstore-failures-private.html --iterations 500 -f --ios-simulator Flakiness Dashboard:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=storage%2Findexeddb%2Fmodern%2Fidbtransaction-objectstore-failures-private.html
Diff: --- /Volumes/Data/slave/ios-simulator-12-release-tests-wk2/build/layout-test-results/storage/indexeddb/modern/idbtransaction-objectstore-failures-private-expected.txt +++ /Volumes/Data/slave/ios-simulator-12-release-tests-wk2/build/layout-test-results/storage/indexeddb/modern/idbtransaction-objectstore-failures-private-actual.txt @@ -15,7 +15,7 @@ Caught attempt to access non-existant object store on the transaction Caught attempt to access valid object store on a transaction that is already finishing put failed (because transaction was aborted) -First version change transaction unexpected error - [object Event] +First version change transaction abort PASS successfullyParsed is true TEST COMPLETE
Attachments
Patch
(6.68 KB, patch)
2019-04-25 10:01 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.63 KB, patch)
2019-04-25 18:18 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-03-28 11:12:06 PDT
<
rdar://problem/49386836
>
Shawn Roberts
Comment 2
2019-03-28 11:21:52 PDT
Marked flaky in
https://trac.webkit.org/changeset/243612/webkit
while waiting for a fix.
Sihui Liu
Comment 3
2019-04-25 10:01:21 PDT
Created
attachment 368242
[details]
Patch
Geoffrey Garen
Comment 4
2019-04-25 12:58:01 PDT
Comment on
attachment 368242
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=368242&action=review
r=me
> Source/WebCore/Modules/indexeddb/IDBTransaction.h:149 > + bool isEventDispatched() const { return m_eventDispatched; }
Let's call this bool didDispatchAbortOrCommit() const { return m_didDispatchAbortOrCommit; }
Sihui Liu
Comment 5
2019-04-25 18:18:16 PDT
Created
attachment 368293
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2019-04-25 18:58:38 PDT
Comment on
attachment 368293
[details]
Patch for landing Clearing flags on attachment: 368293 Committed
r244674
: <
https://trac.webkit.org/changeset/244674
>
WebKit Commit Bot
Comment 7
2019-04-25 18:58:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug