[ iOS Sim ] REGRESSION (r242986) Layout Test storage/indexeddb/modern/idbtransaction-objectstore-failures-private.html is a flaky failure https://bugs.webkit.org/show_bug.cgi?id=196357 <rdar://problem/49386836>

Reviewed by Geoffrey Garen.

Source/WebCore:

Dispatch IDBRequest event to IDBTransaction if event of IDBTransaction has not been dispatched.

Covered by existing tests.

* Modules/indexeddb/IDBRequest.cpp:
(WebCore::IDBRequest::dispatchEvent):
* Modules/indexeddb/IDBTransaction.cpp:
(WebCore::IDBTransaction::dispatchEvent):
* Modules/indexeddb/IDBTransaction.h:

LayoutTests:

* platform/ios-simulator-wk2/TestExpectations:
* platform/mac-wk2/TestExpectations:
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/211514@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244674 268f45cc-cd09-0410-ab3c-d52691b4dbfc